--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/ol.css" type="text/css">
     <style>
       .map {
-        height: 800px;
+        height: 780px;
         width: 100%;
       }
       #marker {
@@ -58,14 +58,23 @@
     <div id="map" class="map"></div>
     <div style="display: none;">
       <!-- Clickable label for Vienna -->
-      <a id="vienna" class="overlay" target="_blank" href="http://en.wikipedia.org/wiki/Vienna">Vienna</a>
+      <!-- <a id="vienna" class="overlay" target="_blank" href="http://en.wikipedia.org/wiki/Vienna">Vienna</a> -->
       <div id="marker" title="Marker"></div>
       <!-- Popup -->
       <div id="popup" title="Welcome to OpenLayers"></div>
+      <div id="message" title="请输入 id 和 描述"></div>
     </div>
     <div>矢量地图Feature总数： <span id="count"></span></div>
+    <div class="popover-content">
+      <p>请在此处<code>${coordinate}</code>输入描述:
+        <input type="text" name="" value="">
+        <button type="button" name="button">保存</button>
+      </p>
+
+    </div>
+
     <script src="build/ol-debug.js" type="text/javascript"></script>
-    <script src="js/main/interaction_5.js" charset="utf-8"></script>
+    <script src="js/main/interaction.js" charset="utf-8"></script>
     <script src="js/main/init.js" charset="utf-8"></script>
     <script src="js/main/draw_and_modify.js" charset="utf-8"></script>
     <script src="js/main/addOverlay_position.js" charset="utf-8"></script>
