--- a/template/index.html
+++ b/template/index.html
@@ -36,9 +36,7 @@
         <option value="None">None</option>
         <option value="Point">Point</option>
         <option value="LineString">LineString</option>
-        <!-- <option value="LinearRing">LinearRing</option> -->
         <option value="Polygon">Polygon</option>
-        <!-- <option value="MultiPolygon">MultiPolygon</option> -->
         <option value="Circle">Circle</option>
       </select>
     </form>
@@ -69,6 +67,7 @@
       <p>请在此处<code>${coordinate}</code>输入描述:
         <input type="text" name="" value="">
         <button type="button" name="button">保存</button>
+        <button type="button" name="button">取消</button>
       </p>
 
     </div>
